Criado tabela para consulta

--- a/cadastro.html
+++ b/cadastro.html
@@ -9,6 +9,7 @@
 		<br> Após cadastro o usuário terá permissão para entrar no sistema.
 		<br><br>
 		<form method="POST" action="cadastro.php">
+			<br><label>Nome:</label><input type="text" name="nome" id="nome"><br>
 			<br><label>Login:</label><input type="text" name="login" id="login"><br>
 			<br><label>Senha:</label><input type="password" name="senha" id="senha"><br>
 			<br><br><input type="submit" value="Cadastrar" id="cadastrar" name="cadastrar">
