--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
 
 			<br> Se não possui login, cadastre-se. <br>
 			<br><a href="cadastro.html">Cadastro</a>
+			<br> TESTE <br>
 		</form>
 	</body>
 </html>
